Issue 18763: Fixed wraparound issue with combo-box arrows.

--- a/source/stylesheets/screen.css
+++ b/source/stylesheets/screen.css
@@ -805,8 +805,11 @@ body {
 }
 /* Combo Box */
 .xv-combobox {
+  padding: 6px;
+  padding-top: 8px;
+  padding-right: 0;
   height: 24px;
-  width: 100%;
+  width: 200px;
   display: inline-block;
 }
 .xv-combobox-input {
@@ -814,10 +817,10 @@ body {
   border: 0;
   display: inline-block;
   outline: none;
-  width: 80%;
+  width: 150px;
 }
 .xv-combobox-icon {
-  margin-left: 8px;
+  margin-left: 4px;
   display: inline-block;
 }
 /* Picker */
